--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 	padding:0
 }
 body{
-	font-family:-apple-system,BlinkMacSystemFont,'avenir next',avenir,helvetica,'helvetica neue',ubuntu,roboto,noto,'segoe ui',arial,sans-serif;
+	font-family: 'Roboto', sans-serif;
 	-webkit-font-smoothing:antialiased;
 	text-rendering:optimizeLegibility;
 	line-height:1.5;
