--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,7 +68,7 @@ hr{
 	border:0
 }
 header{
-	flex-basis:10rem;
+	flex-basis:40rem;
 	flex-grow:1;
 	position:relative
 }
@@ -77,7 +77,7 @@ header a{
 }
 header li{
 	margin-bottom:.2rem;
-	text-align:right;
+	text-align:left;
 	margin-right:2rem
 }
 header a.active{
@@ -143,7 +143,7 @@ strong,b{
 main{
 	display:flex;
 	flex-wrap:wrap;
-	max-width:50rem;
+	max-width:40rem;
 	margin:2rem auto;
 	padding:1rem
 }
