--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,10 @@ a{
 	text-decoration-skip-ink:auto;
 	text-decoration:underline
 }
+.post ul{
+		list-style:none
+	}
+
 .post p{
 	margin:.5rem 0
 }
@@ -54,10 +58,14 @@ h1,h2,h3,h4,h5{
 	margin:1rem 0;
 	font-weight:600
 }
-.posts ul,header ul{
-	list-style:none
+.posts ul,header ul, a{
+	list-style:none;
+	
 }
-.posts li{
+.postnl{
+text-decoration:none;
+}
+.postli {
 	align-items:center;
 	display:flex;
 	justify-content:space-between;
