--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,8 +45,12 @@ header a{
 header li{
 	margin-bottom:.2rem;
 	text-align:left;
-	margin-right:2rem
-}
+	margin-right:2rem;
+
+
+		display:inline;
+
+	}
 header a.active{
 	font-weight:bold
 }
@@ -92,9 +96,7 @@ main{
 	padding:1rem
 }
 @media screen and (max-width: 35rem){
-	header li{
-		display:inline;margin-right:1rem
-	}
+	
 
 nav ul{
 	border-right:0px
